Add icons to "where can i get help?"

--- a/html/home_en_US.html
+++ b/html/home_en_US.html
@@ -56,8 +56,20 @@
         </md-card-title-text>
       </md-card-title>
       <md-card-content>
-          <p><a href='https://www.lib.umn.edu/about/contact'>Send us an email</a></p>
-          <p>Call us at <a href="tel:+16126243321">612-624-3321</a></p>
+        <md-list>
+          <md-list-item>
+            <prm-icon icon-type="svg" svg-icon-set="communication" icon-definition="ic_email_24px" class="" style="margin-right:1em;"></prm-icon>
+              <span>
+                <a href='https://www.lib.umn.edu/about/contact'>Send us an email</a>
+              </span>
+          </md-list-item>
+          <md-list-item>
+            <prm-icon icon-type="svg" svg-icon-set="communication" icon-definition="ic_phone_24px" class="" style="margin-right:1em;"></prm-icon>
+            <span>
+              <a href="tel:+16126243321">Call us at 612-624-3321</a>
+            </span>
+          </md-list-item>
+        </md-list>
       </md-card-content>
     </md-card>
   </div>
