--- a/html/email_en_US.html
+++ b/html/email_en_US.html
@@ -1,3 +1,9 @@
+<style>
+  prm-logo-after {
+    display: none !important;
+  }
+</style>
+
 <!-- HEADER -->
 <table style="width: 600px;
     display: block !important;
@@ -7,14 +13,13 @@
     border-spacing: 0 !important;
     padding: 0 !important;
     border-top-left-radius: 15px !important;
-    border-top-right-radius: 15px !important;" align="center" bgcolor="#4d6b82"
+    border-top-right-radius: 15px !important;" align="center" bgcolor="#7a0019"
        border="0" cellpadding="0"
        cellspacing="0">
     <tbody>
     <tr>
-        <td style="cursor: default;
-    padding: 1em 0.5em;">
-            <prm-logo style="height: 66px;"></prm-logo>
+        <td style="cursor: default; padding: 1em 0.5em;">
+            <prm-logo-after style="height: 66px;"></prm-logo-after>
         </td>
     </tr>
     </tbody>
