Update email template
Use `prm-logo` instead of  `prm-logo-after`. As of the Feb 2020
release, the latter component is not rendered properly in emails.

--- a/html/email_en_US.html
+++ b/html/email_en_US.html
@@ -13,7 +13,7 @@
     <tbody>
     <tr>
         <td style="cursor: default; padding: 1em 0.5em;">
-            <prm-logo-after style="height: 66px;"></prm-logo-after>
+            <prm-logo style="height: 66px;"></prm-logo>
         </td>
     </tr>
     </tbody>
